--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -61,6 +67,9 @@
             },
             "development": {
               "buildTarget": "lab2:build:development"
+            },
+            "staging":{
+              "buildTarget": "lab2:build:staging"
             }
           },
           "defaultConfiguration": "development"
